<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="pickInterval"
        android:tag="0"
        android:text="@string/p1" />

    <Button
        android:id="@+id/min2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/p1"
        android:layout_alignRight="@+id/p1"
        android:layout_below="@+id/p1"
		android:onClick="pickInterval"
		android:tag="1"
        android:text="@string/min2" />

    <Button
        android:id="@+id/maj2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/min2"
        android:layout_alignRight="@+id/min2"
        android:layout_below="@+id/min2"
        android:onClick="pickInterval"
        android:tag="2"
        android:text="@string/maj2" />

    <Button
        android:id="@+id/min3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/maj2"
        android:layout_alignRight="@+id/maj2"
        android:layout_below="@+id/maj2"
        android:onClick="pickInterval"
        android:tag="3"
        android:text="@string/min3" />
    
    <Button
        android:id="@+id/maj3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/min3"
        android:layout_alignRight="@+id/min3"
        android:layout_below="@+id/min3"
        android:onClick="pickInterval"
        android:tag="4"
        android:text="@string/maj3" />

    <Button
        android:id="@+id/p4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/maj3"
        android:layout_alignRight="@+id/maj3"
        android:layout_below="@+id/maj3"
        android:onClick="pickInterval"
        android:tag="5"
        android:text="@string/p4" />

    <Button
        android:id="@+id/a4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/p4"
        android:layout_alignRight="@+id/maj3"
        android:layout_below="@+id/p4"
        android:onClick="pickInterval"
        android:tag="6"
        android:text="@string/a4" />
    
    <Button
        android:id="@+id/p5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="pickInterval"
        android:tag="7"
        android:text="@string/p5" />
    	
    <Button
        android:id="@+id/min6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/min2"
        android:layout_alignBottom="@+id/min2"
        android:layout_alignLeft="@+id/p5"
        android:layout_alignRight="@+id/p5"
        android:onClick="pickInterval"
        android:tag="8"
        android:text="@string/min6" />

    <Button
        android:id="@+id/maj6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/min6"
        android:layout_alignRight="@+id/min6"
        android:layout_below="@+id/min6"
        android:onClick="pickInterval"
        android:tag="9"
        android:text="@string/maj6" />

    <Button
        android:id="@+id/min7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/maj6"
        android:layout_alignRight="@+id/maj6"
        android:layout_below="@+id/maj6"
        android:onClick="pickInterval"
        android:tag="10"
        android:text="@string/min7" />

    <Button
        android:id="@+id/maj7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/maj3"
        android:layout_alignBottom="@+id/maj3"
        android:layout_alignLeft="@+id/min7"
        android:layout_alignRight="@+id/min7"
        android:onClick="pickInterval"
        android:tag="11"
        android:text="@string/maj7" />

    <Button
        android:id="@+id/p8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/maj7"
        android:layout_below="@+id/maj7"
        android:onClick="pickInterval"
        android:tag="12"
        android:text="@string/p8" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/playInterval"
        android:layout_alignBottom="@+id/playInterval"
        android:layout_alignRight="@+id/score"
        android:onClick="reset"
        android:text="@string/resetText" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/p8"
        android:layout_below="@+id/p8"
        android:gravity="right"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/switch_modes1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="switchModes1"
        android:text="@string/switch_modes" />

    <Button
        android:id="@+id/playInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/switch_modes1"
        android:layout_alignLeft="@+id/a4"
        android:onClick="playInterval"
        android:text="@string/playText" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/a4"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>